syntax = "proto3";

package proto_conn_mssql;
option csharp_namespace = "Proto.Config.Connection"; // keep same for generator

// @attr [CategoryOrder("Source", 1)]
// @attr [CategoryOrder("Security", 2)]
// @attr [CategoryOrder("Pooling", 3)]
// @attr [CategoryOrder("Initialization", 4)]
// @attr [CategoryOrder("ConnectionResilency", 5)]
// @attr [CategoryOrder("Advanced", 6)]
// @base : ViewModelValidatableWithSeverity<ConnMsSql, ConnMsSql.ConnMsSqlValidator>
message proto_conn_ms_sql {
    string name = 1;
    string guid = 102;
    //
    // Summary:
    //     Gets or sets the maximum number of connections allowed in the connection pool
    //     for this specific connection string.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.MaxPoolSize
    //     property, or 100 if none has been supplied.
    // @attr [Description("The value of the System.Data.SqlClient.SqlConnectionStringBuilder.MaxPoolSize property, or 100 if none has been supplied.")]
    // @attr [Category("Pooling")]
    int32 max_pool_size = 2;
    //
    // Summary:
    //     [Supported in the .NET Framework 4.5.1 and later versions] The number of reconnections
    //     attempted after identifying that there was an idle connection failure. This must
    //     be an integer between 0 and 255. Default is 1. Set to 0 to disable reconnecting
    //     on idle connection failures. An System.ArgumentException will be thrown if set
    //     to a value outside of the allowed range.
    //
    // Returns:
    //     The number of reconnections attempted after identifying that there was an idle
    //     connection failure.
    // @attr [Description(".NET Framework 4.5.1 and later versions. The number of reconnections attempted after identifying that there was an idle connection failure. This must be an integer between 0 and 255. Default is 1. Set to 0 to disable reconnecting on idle connection failures.")]
    // @attr [Category("ConnectionResilency")]
    int32 connect_retry_count = 3;
    //
    // Summary:
    //     [Supported in the .NET Framework 4.5.1 and later versions] Amount of time (in
    //     seconds) between each reconnection attempt after identifying that there was an
    //     idle connection failure. This must be an integer between 1 and 60. The default
    //     is 10 seconds. An System.ArgumentException will be thrown if set to a value outside
    //     of the allowed range.
    //
    // Returns:
    //     Amount of time (in seconds) between each reconnection attempt after identifying
    //     that there was an idle connection failure.
    // @attr [Description(".NET Framework 4.5.1 and later versions. Amount of time (in seconds) between each reconnection attempt after identifying that there was an idle connection failure. This must be an integer between 1 and 60. The default is 10 seconds.")]
    // @attr [Category("ConnectionResilency")]
    int32 connect_retry_interval = 4;
    //
    // Summary:
    //     Gets or sets the minimum number of connections allowed in the connection pool
    //     for this specific connection string.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.MinPoolSize
    //     property, or 0 if none has been supplied.
    // @attr [Description("The value of the System.Data.SqlClient.SqlConnectionStringBuilder.MinPoolSize property, or 0 if none has been supplied.")]
    // @attr [Category("Pooling")]
    int32 min_pool_size = 5;
    //
    // Summary:
    //     When true, an application can maintain multiple active result sets (MARS). When
    //     false, an application must process or cancel all result sets from one batch before
    //     it can execute any other batch on that connection.For more information, see Multiple
    //     Active Result Sets (MARS).
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.MultipleActiveResultSets
    //     property, or false if none has been supplied.
    // @attr [Description("When true, an application can maintain multiple active result sets (MARS). When false, an application must process or cancel all result sets from one batch before it can execute any other batch on that connection.")]
    // @attr [CategoryAttribute("Advanced")]
    bool multiple_active_result_sets = 6;
    //
    // Summary:
    //     If your application is connecting to an AlwaysOn availability group (AG) on different
    //     subnets, setting MultiSubnetFailover=true provides faster detection of and connection
    //     to the (currently) active server. For more information about SqlClient support
    //     for Always On Availability Groups, see SqlClient Support for High Availability,
    //     Disaster Recovery.
    //
    // Returns:
    //     Returns System.Boolean indicating the current value of the property.
    // @attr [Description("If your application is connecting to an AlwaysOn availability group (AG) on different subnets, setting MultiSubnetFailover=true provides faster detection of and connection to the (currently) active server. For more information about SqlClient support for Always On Availability Groups, see SqlClient Support for High Availability, Disaster Recovery.")]
    // @attr [Category("Source")]
    bool multi_subnet_failover = 7;
    //
    // Summary:
    //     When the value of this key is set to true, the application is required to retrieve
    //     all IP addresses for a particular DNS entry and attempt to connect with the first
    //     one in the list. If the connection is not established within 0.5 seconds, the
    //     application will try to connect to all others in parallel. When the first answers,
    //     the application will establish the connection with the respondent IP address.
    //
    // Returns:
    //     A boolean value.
    // @attr [Description("When the value of this key is set to true, the application is required to retrieve all IP addresses for a particular DNS entry and attempt to connect with the first one in the list. If the connection is not established within 0.5 seconds, the application will try to connect to all others in parallel. When the first answers, the application will establish the connection with the respondent IP address.")]
    // @attr [Category("Source")]
    bool transparent_network_i_p_resolution = 8;
    //
    // Summary:
    //     Gets or sets a string that contains the name of the network library used to establish
    //     a connection to the SQL Server.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.NetworkLibrary
    //     property, or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Category("Advanced")]
    string network_library = 9;
    //
    // Summary:
    //     Gets or sets the size in bytes of the network packets used to communicate with
    //     an instance of SQL Server.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.PacketSize
    //     property, or 8000 if none has been supplied.
    // @attr [Description("The value of the System.Data.SqlClient.SqlConnectionStringBuilder.PacketSize property, or 8000 if none has been supplied.")]
    // @attr [Category("Advanced")]
    int32 PacketSize = 10;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates if security-sensitive information,
    //     such as the password, is not returned as part of the connection if the connection
    //     is open or has ever been in an open state.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.PersistSecurityInfo
    //     property, or false if none has been supplied.
    // @attr [Description("Gets or sets a Boolean value that indicates if security-sensitive information, such as the password, is not returned as part of the connection if the connection is open or has ever been in an open state.")]
    // @attr [Category("Security")]
    bool persist_security_info = 11;
    //
    // Summary:
    //     Gets or sets the minimum time, in seconds, for the connection to live in the
    //     connection pool before being destroyed.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.LoadBalanceTimeout
    //     property, or 0 if none has been supplied.
    // @attr [Description("Gets or sets the minimum time, in seconds, for the connection to live in the connection pool before being destroyed.")]
    // @attr [Category("Pooling")]
    int32 load_balance_timeout = 12;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates whether the connection will be pooled
    //     or explicitly opened every time that the connection is requested.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.Pooling property,
    //     or true if none has been supplied.
    // @attr [Description("Gets or sets a Boolean value that indicates whether the connection will be pooled or explicitly opened every time that the connection is requested.")]
    // @attr [Category("Pooling")]
    bool pooling = 13;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates whether replication is supported
    //     using the connection.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.Replication
    //     property, or false if none has been supplied.
    // @attr [Description("System.Data.SqlClient.SqlConnectionStringBuilder.Replication")]
    // @attr [Category("Replication")]
    bool replication = 14;
    //
    // Summary:
    //     Gets or sets a string value that indicates how the connection maintains its association
    //     with an enlisted System.Transactions transaction.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.TransactionBinding
    //     property, or String.Empty if none has been supplied.
    // @attr [Description("System.Data.SqlClient.SqlConnectionStringBuilder.TransactionBinding")]
    // @attr [Category("Advanced")]
    string transaction_binding = 15;
    //
    // Summary:
    //     Gets or sets a string value that indicates the type system the application expects.
    //
    // Returns:
    //     The following table shows the possible values for the System.Data.SqlClient.SqlConnectionStringBuilder.TypeSystemVersion
    //     property:ValueDescription SQL Server 2005Uses the SQL Server 2005 type system.
    //     No conversions are made for the current version of ADO.NET.SQL Server 2008Uses
    //     the SQL Server 2008 type system.LatestUse the latest version than this client-server
    //     pair can handle. This will automatically move forward as the client and server
    //     components are upgraded.
    // @attr [Category("Advanced")]
    string type_system_version = 16;
    //
    // Summary:
    //     Gets or sets the user ID to be used when connecting to SQL Server.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.UserID property,
    //     or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Category("Security")]
    string user_i_d = 17;
    //
    // Summary:
    //     Gets or sets a value that indicates whether to redirect the connection from the
    //     default SQL Server Express instance to a runtime-initiated instance running under
    //     the account of the caller.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.UserInstance
    //     property, or False if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Category("Source")]
    bool user_instance = 18;
    //
    // Summary:
    //     Gets or sets the name of the workstation connecting to SQL Server.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.WorkstationID
    //     property, or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Category("Context")]
    string workstation_i_d = 19;
    //
    // Summary:
    //     Gets or sets the password for the SQL Server account.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.Password property,
    //     or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     The password was incorrectly set to null. See code sample below.
    // @attr [Category("Security")]
    string password = 20;
    //
    // Summary:
    //     Describes the different SQL authentication methods that can be used by a client
    //     connecting to Azure SQL Database. For details, see Connecting to SQL Database
    //     By Using Azure Active Directory Authentication.
    enum SqlAuthenticationMethod
    {
        //
        // Summary:
        //     The authentication method is not specified.
        NotSpecified = 0;
        //
        // Summary:
        //     The authentication method is Sql Password.
        SqlPassword = 1;
        //
        // Summary:
        //     The authentication method uses Active Directory Password. Use Active Directory
        //     Password to connect to a SQL Database using an Azure AD principal name and password.
        ActiveDirectoryPassword = 2;
        //
        // Summary:
        //     The authentication method uses Active Directory Integrated. Use Active Directory
        //     Integrated to connect to a SQL Database using integrated Windows authentication.
        ActiveDirectoryIntegrated = 3;
    }
    //
    // Summary:
    //     Gets the authentication of the connection string.
    //
    // Returns:
    //     The authentication of the connection string.
    // @attr [Category("Security")]
    SqlAuthenticationMethod authentication = 21;
    //
    // Summary:
    //     Gets or sets the name of the database associated with the connection.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.InitialCatalog
    //     property, or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Description("Gets or sets the name of the database associated with the connection.")]
    // @attr [Category("Source")]
    string initial_catalog = 22;
    //
    // Summary:
    //     Specifies a value for System.Data.SqlClient.SqlConnectionStringBuilder.ApplicationIntent.
    //     Possible values are ReadWrite and ReadOnly.
    enum ApplicationIntent
    {
        //
        // Summary:
        //     The application workload type when connecting to a server is read write.
        ReadWrite = 0;
        //
        // Summary:
        //     The application workload type when connecting to a server is read only.
        ReadOnly = 1;
    }
    //
    // Summary:
    //     Declares the application workload type when connecting to a database in an SQL
    //     Server Availability Group. You can set the value of this property with System.Data.SqlClient.ApplicationIntent.
    //     For more information about SqlClient support for Always On Availability Groups,
    //     see SqlClient Support for High Availability, Disaster Recovery.
    //
    // Returns:
    //     Returns the current value of the property (a value of type System.Data.SqlClient.ApplicationIntent).
    // @attr [Description("Declares the application workload type when connecting to a database in an SQL Server Availability Group. You can set the value of this property with System.Data.SqlClient.ApplicationIntent.")]
    // @attr [Category("Initialization")]
    ApplicationIntent ApplicationIntentValue = 23;
    //
    // Summary:
    //     Gets or sets the name of the application associated with the connection string.
    //
    // Returns:
    //     The name of the application, or ".NET SqlClient Data Provider" if no name has
    //     been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Description("The name of the application, or \".NET SqlClient Data Provider\" if no name has been supplied.")]
    // @attr [Category("Context")]
    string ApplicationName = 24;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates whether asynchronous processing is
    //     allowed by the connection created by using this connection string.
    //
    // Returns:
    //     This property is ignored beginning in .NET Framework 4.5. For more information
    //     about SqlClient support for asynchronous programming, see Asynchronous Programming.The
    //     value of the System.Data.SqlClient.SqlConnectionStringBuilder.AsynchronousProcessing
    //     property, or false if no value has been supplied.
    // @attr [Description("This property is ignored beginning in .NET Framework 4.5.")]
    // @attr [Category("Initialization")]
    bool AsynchronousProcessing = 25;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates whether User ID and Password are
    //     specified in the connection (when false) or whether the current Windows account
    //     credentials are used for authentication (when true).
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.IntegratedSecurity
    //     property, or false if none has been supplied.
    // @attr [Description("Gets or sets a Boolean value that indicates whether User ID and Password are specified in the connection (when false) or whether the current Windows account credentials are used for authentication (when true).")]
    // @attr [Category("Security")]
    bool IntegratedSecurity = 26;
    //
    // Summary:
    //     Gets or sets a value that indicates whether a client/server or in-process connection
    //     to SQL Server should be made.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.ContextConnection
    //     property, or False if none has been supplied.
    // @attr [Description("System.Data.SqlClient.SqlConnectionStringBuilder.ContextConnection")]
    // @attr [Category("Source")]
    bool ContextConnection = 27;
    //
    // Summary:
    //     Gets or sets the length of time (in seconds) to wait for a connection to the
    //     server before terminating the attempt and generating an error.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.ConnectTimeout
    //     property, or 15 seconds if no value has been supplied.
    // @attr [Description("The value of the System.Data.SqlClient.SqlConnectionStringBuilder.ConnectTimeout property, or 15 seconds if no value has been supplied.")]
    // @attr [Category("Initialization")]
    int32 ConnectTimeout = 28;
    //
    // Summary:
    //     Gets or sets a string that contains the name of the primary data file. This includes
    //     the full path name of an attachable database.
    //
    // Returns:
    //     The value of the AttachDBFilename property, or String.Empty if no value has been
    //     supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Description("Gets or sets a string that contains the name of the primary data file. This includes the full path name of an attachable database.")]
    // @attr [Editor("System.Windows.Forms.Design.FileNameEditor, System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a", "System.Drawing.Design.UITypeEditor, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a")]
    // @attr [Category("Source")]
    string attach_d_b_filename = 29;
    //
    // Summary:
    //     Gets or sets the name or network address of the instance of SQL Server to connect
    //     to.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.DataSource
    //     property, or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Description("Gets or sets the name or network address of the instance of SQL Server to connect to.")]
    // @attr [Category("Source")]
    string data_source = 30;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates whether SQL Server uses SSL encryption
    //     for all data sent between the client and server if the server has a certificate
    //     installed.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.Encrypt property,
    //     or false if none has been supplied.
    // @attr [Description("Gets or sets a Boolean value that indicates whether SQL Server uses SSL encryption for all data sent between the client and server if the server has a certificate installed.")]
    // @attr [Category("Security")]
    bool encrypt = 31;
    //
    // Summary:
    //     Specifies that Always Encrypted functionality is enabled in a connection. Note
    //     that these settings cannot be used to bypass encryption and gain access to plaintext
    //     data. For details, see Always Encrypted (Database Engine).
    enum SqlConnectionColumnEncryptionSetting
    {
        //
        // Summary:
        //     Specifies the connection does not use Always Encrypted. Should be used if no
        //     queries sent over the connection access encrypted columns.
        Disabled = 0;
        //
        // Summary:
        //     Enables Always Encrypted functionality for the connection. Query parameters that
        //     correspond to encrypted columns will be transparently encrypted and query results
        //     from encrypted columns will be transparently decrypted.
        Enabled = 1;
    }
    //
    // Summary:
    //     Gets and sets the column encryption settings for the connection string builder.
    //
    // Returns:
    //     The column encryption settings for the connection string builder.
    // @attr [Description("Gets and sets the column encryption settings for the connection string builder.")]
    // @attr [Category("Security")]
    SqlConnectionColumnEncryptionSetting ColumnEncryptionSetting = 32;
    //
    // Summary:
    //     Gets or sets a value that indicates whether the channel will be encrypted while
    //     bypassing walking the certificate chain to validate trust.
    //
    // Returns:
    //     A Boolean. Recognized values are true, false, yes, and no.
    // @attr [Description("Gets or sets a value that indicates whether the channel will be encrypted while bypassing walking the certificate chain to validate trust.")]
    // @attr [Category("Security")]
    bool trust_server_certificate = 33;
    //
    // Summary:
    //     Gets or sets a Boolean value that indicates whether the SQL Server connection
    //     pooler automatically enlists the connection in the creation thread's current
    //     transaction context.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.Enlist property,
    //     or true if none has been supplied.
    // @attr [Description("Gets or sets a Boolean value that indicates whether the SQL Server connection pooler automatically enlists the connection in the creation thread's current transaction context.")]
    // @attr [Category("Pooling")]
    bool enlist = 34;
    //
    // Summary:
    //     Gets or sets the name or address of the partner server to connect to if the primary
    //     server is down.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.FailoverPartner
    //     property, or String.Empty if none has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Description("Gets or sets the name or address of the partner server to connect to if the primary server is down.")]
    // @attr [Category("Source")]
    string failover_partner = 35;
    //
    // Summary:
    //     Gets or sets the SQL Server Language record name.
    //
    // Returns:
    //     The value of the System.Data.SqlClient.SqlConnectionStringBuilder.CurrentLanguage
    //     property, or String.Empty if no value has been supplied.
    //
    // Exceptions:
    //   T:System.ArgumentNullException:
    //     To set the value to null, use System.DBNull.Value.
    // @attr [Description("Gets or sets the SQL Server Language record name.")]
    // @attr [Category("Initialization")]
    string CurrentLanguage = 36;
}